# SongSnatch

./: .env.example  .gitignore  README.md  compose.yml  prometheus.yml
frontend/song-snatch/: package-lock.json  package.json  tailwind.config.js
frontend/song-snatch/src/app/: layout.js  page.js  provider.js
frontend/song-snatch/src/components/: DownloadButton.js  Footer.js  Header.js  InputBox.js  SongList.js
producer/: Dockerfile  index.js  metrics.js  package-lock.json  package.json  rabbit.js  redisClient.js
producer/controller/: song.js
producer/router/: song.js
worker/: .dockerignore  Dockerfile  cli.py  consumer.py  main.py  metrics.py  pyproject.toml  requirements.txt  vercel.json
worker/helper/: helper.py
worker/internal/downloader/: downloader.py  jiosaavn.py
worker/internal/spotify/: spotify.py
worker/models/: track.py
worker/router/: songs.py  spotify.py
