[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "pika==1.3.2",
    "prometheus-client==0.21.0",
    "pydantic==2.11.7",
    "jiosaavnpy==0.1.3",
    "python-dotenv==1.1.1",
    "redis==6.2.0",
    "requests==2.32.3",
    "spotipy==2.25.1",
    "typer==0.16.0",
    "uvicorn==0.35.0",
    "yt-dlp==2025.8.11",
]
